--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 			<link rel="stylesheet" href="style.css">
 			<meta name="author" content="lemmyslaya">
 			<meta charset="UTF-8">
-			<title>Strona responsywna</title>
+			<title>Strona rwd</title>
 		</head>
 		<body>
 			<nav>
@@ -35,6 +35,7 @@
 				</div>
 			</section>
 			<div class="map">
+				<p>ndnjnsjdjks</p>
 				<img src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&scale=2&zoom=13&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:red%7Clabel:Company%7C40.718217,-73.998284&key=AIzaSyCnC6YIM_Aup50dB6kLS-j9JA_tZdqg-Pc" alt="mapny">
 			</div>
 			<div class="footer">
