--- a/index.html
+++ b/index.html
@@ -1,48 +1,235 @@
 <!DOCTYPE html>
-	<html lang="en">
-		<head>
-			<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
-			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<link rel="stylesheet" href="style.css">
-			<meta name="author" content="lemmyslaya">
-			<meta charset="UTF-8">
-			<title>Strona rwd</title>
-		</head>
-		<body>
-			<nav>
-				<div class="container">
-					<img src="//placehold.it/150x30" alt="logo">
-					<ul>
-						<li><a href="#">About me</a></li>
-						<li><a href="#">Pages</a></li>
-						<li><a href="#">Contact</a></li>
-					</ul>
-				</div>
+<html lang="en">
+	<head>
+		<script src="https://use.fontawesome.com/97d7f77f4b.js"></script>
+		<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans"/>
+		<link rel="stylesheet" href="css/style.css">
+		<meta name="author" content="lemmyslaya">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Projekt1</title>
+	</head>
+	<body>
+		<header>
+			<nav class="container">
+				<img src="//placehold.it/150x30" alt="logo">
+				<ul>
+					<li><a href="#">About me</a></li>
+					<li><a href="#">Pages</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
 			</nav>
-			<header>
+		</header>
+		<section class="hero">
+			<div class="container">
 				<div class="slogan">
-					<h2>Niebo pełne gwiazd</h2>
+					<h1>hardcore lives</h1>
 				</div>
-			</header>
-			<section class="container clearfix">
-				<div class="wyjebanawkosmosgaleria">
-					<h2>Gallery</h2>
-					<div class="photo gallery">
-						<img src="https://images.unsplash.com/photo-1459909633680-206dc5c67abb?dpr=1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;h=1000&amp;q=80&amp;cs=tinysrgb&amp;crop=" alt="moon">
-						<img src="https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?dpr=1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;h=998&amp;q=80&amp;cs=tinysrgb&amp;crop=" alt="earth">
-						<img src="https://images.unsplash.com/photo-1466853817435-05b43fe45b39?dpr=1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;h=1090&amp;q=80&amp;cs=tinysrgb&amp;crop=" alt="sky">
+			</div>
+		</section>
+		<section class="benefits">
+			<div class="row">
+				<div class="col-4">
+					<i class="fa fa-music fa-5x" aria-hidden="true"></i>
+					<h2>Music</h2>
+					<p>Hardcore music is a combination of melodic and aggressive guitar riffs with fast drum rythm. Lyrics usually focus on politics, human rights or relations beetwen people, but not only!</p>
+				</div>
+				<div class="col-4">
+					<i class="fa fa-heart fa-5x" aria-hidden="true"></i>
+					<h2>Culture</h2>
+					<p>Hardcore it's not only a music! It's about tattoo's, extreme sports or fashion.</p>
+				</div>
+				<div class="col-4">
+					<i class="fa fa-users fa-5x" aria-hidden="true"></i>
+					<h2>Community</h2>
+					<p>People related with hardcore taking part in many charity projects. For example collecting food for animal shelters or homless people by the way having fun and spending time together!</p>
+				</div>
+			</div>
+			<div class="allabout">
+				<hr>
+				<h2>All about hardcore</h2>
+				<p>Just look at gallery below. You can see what hardcore is and why I love it so much!</p>
+			</div>
+		</section>
+		<section class="gallery">
+			<div class="row">
+				<div class="col-3 images">
+					<div class="layer">
+						<i class="fa fa-link" aria-hidden="true"></i>
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</div>
+					<img src="https://images.unsplash.com/photo-1477613102134-56e0bc80c5ef?dpr=1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;h=1125&amp;q=80&amp;cs=tinysrgb&amp;crop=" alt="fatbassplayer">
+				</div>
+				<div class="col-3 images">
+					<div class="layer">
+						<i class="fa fa-link" aria-hidden="true"></i>
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</div>
+					<img src="https://c1.staticflickr.com/6/5559/15045537731_11fa3cfe8d_z.jpg" alt="guitarists">
+				</div>
+				<div class="col-3 images">
+					<div class="layer">
+						<i class="fa fa-link" aria-hidden="true"></i>
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</div>
+					<img src="https://images.unsplash.com/photo-1477704080907-b04e4e2d3282?dpr=1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;h=1000&amp;q=80&amp;cs=tinysrgb&amp;crop=" alt="">
+				</div>
+				<div class="col-3 images">
+					<div class="layer">
+						<i class="fa fa-link" aria-hidden="true"></i>
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</div>
+					<img src="https://c1.staticflickr.com/8/7368/13750797775_73bd00b146_z.jpg" alt="singalong">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-3 images">
+					<div class="layer">
+						<i class="fa fa-link" aria-hidden="true"></i>
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</div>
+					<img src="https://c1.staticflickr.com/6/5474/9213668220_fa701f641d_z.jpg" alt="sticktoyourguns">
+				</div>
+				<div class="col-3 images">
+					<div class="layer">
+						<i class="fa fa-link" aria-hidden="true"></i>
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</div>
+					<img src="https://c1.staticflickr.com/4/3827/9705515289_73c684d1b7_z.jpg" alt="trappedunderice">
+				</div>
+				<div class="col-3 images">
+					<div class="layer">
+						<i class="fa fa-link" aria-hidden="true"></i>
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</div>
+					<img src="https://c1.staticflickr.com/3/2884/9290633686_5f4659e767_z.jpg" alt="naysayer">
+				</div>
+				<div class="col-3 images">
+					<div class="layer">
+						<i class="fa fa-link" aria-hidden="true"></i>
+						<i class="fa fa-search" aria-hidden="true"></i>
+					</div>
+					<img src="https://c1.staticflickr.com/6/5542/9290631206_b1c49d5b06_z.jpg" alt="turnstile">
+				</div>
+			</div>
+		</section>
+		<section class="teamcolumns">
+			<div class="row">
+				<div class="col-3">
+					<div class="circle">
+						<div class="layer">
+							<p>Front-end dev</p>
+						</div>
+					</div>
+						<h2>Szymon Lemiesz</h2>
+				</div>
+				<div class="col-3">
+					<div class="circle">
+						<div class="layer">
+							<p>Project manager</p>
+						</div>
+					</div>
+						<h2>Szymon Lemiesz</h2>
+				</div>
+				<div class="col-3">
+					<div class="circle">
+						<div class="layer">
+							<p>Junior front-end dev</p>
+						</div>
+					</div>
+						<h2>Szymon Lemiesz</h2>
+				</div>
+				<div class="col-3">
+					<div class="circle">
+						<div class="layer">
+							<p>Graphic designer</p>
+						</div>
+					</div>
+						<h2>Szymon Lemiesz</h2>
+				</div>
+			</div>
+		</section>
+		<section class="grid photo">
+			<div class="row">
+				<div class="col-4">
+					<img src="https://images.unsplash.com/photo-1468392788711-903a924761a6?dpr=1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;h=981&amp;q=80&amp;cs=tinysrgb&amp;crop=" alt="blackguitar">
+				</div>
+				<div class="col-8">
+					<h2>Never give up</h2>
+					<p>"I’m still here after all these years<br>Even if it’s hard, I will remain<br>I never gave up, I’ll never give in, I find my way"</p>
+				</div>
+			</div>
+		</section>
+		<section class="stats numbers">
+			<div class="row">
+				<div class="col-3">
+					<h2>0</h2>
+					<p>followers</p>
+				</div>
+				<div class="col-3">
+					<h2>2017</h2>
+					<p>since</p>
+				</div>
+				<div class="col-3">
+					<h2>0</h2>
+					<p>happy clients</p>
+				</div>
+				<div class="col-3">
+					<h2>1</h2>
+					<p>projects</p>
+				</div>
+			</div>
+		</section>
+		<section class="footer">
+			<div class="row">
+				<div class="col-4">
+					<h2>About us </h2>
+					<p>NAIKsmndui huidhuisdg jdhhuidgsygdahdu husadiugasdhasjk kdhuaisdhashd jkhdjksahdjkashdjkh dhusiahdi wqoidjp qjkdkj</p>
+				</div>
+				<div class="col-4 info">
+					<h2>Get in touch</h2>
+					<div class="row">
+  						<div class="col-4 fa">
+    						<p>Adres:</p>
+  						</div>
+  						<div class="col-8">  
+						    <p>
+						        62-200 Gniezno<br>
+						        ul. Poznańska 69
+						    </p>
+						</div>
+					</div>
+					<div class="row">
+  						<div class="col-4">
+    						<p>Phone:</p>
+  						</div>
+  						<div class="col-8">  
+						    <p>+48 691-615-677</p>
+						</div>
+					</div>
+					<div class="row">
+  						<div class="col-4">
+    						<p>Email:</p>
+  						</div>
+  						<div class="col-8">  
+						    <p>s2ym@o2.pl</p>
+						</div>
 					</div>
 				</div>
-			</section>
-			<div class="map">
-				<p>ndnjnsjdjks</p>
-				<img src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&scale=2&zoom=13&size=600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:red%7Clabel:Company%7C40.718217,-73.998284&key=AIzaSyCnC6YIM_Aup50dB6kLS-j9JA_tZdqg-Pc" alt="mapny">
-			</div>
-			<div class="footer">
-				<div class="container">
-					<p>@Copyright2017</p>
+				<div class="col-4">
+					<h2>Social media</h2>
+					<p>posaopjdjk hushdih auishduasihd jkahdaku</p>
+					<i class="fa fa-facebook-official" aria-hidden="true"></i>
+					<i class="fa fa-twitter-square" aria-hidden="true"></i>
+					<i class="fa fa-youtube-square" aria-hidden="true"></i>
+					<i class="fa fa-google-plus-square" aria-hidden="true"></i>
 				</div>
 			</div>
-		</body>
-	</html>
-	
+		</section>
+		<section class="footer2">
+			<div class="copyrigts">
+				<p>@ Copyrigts 2017</p>
+			</div>
+		</section>
+	</body>
+</html>
